--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<! DOCTYPE html>
+<html lang="ru">
+  <head>
+    <title>11</title>
+    <meta charset="UTF-8"
+  </head>
+  <body>
+    <h1>13</h1>
+  </body>
+</html>
